Fix alignment in Chrome

--- a/src/views/widgets/ExpanderIcon.scss
+++ b/src/views/widgets/ExpanderIcon.scss
@@ -1,3 +1,3 @@
 .ExpanderIcon {
-  vertical-align: text-top;
+  vertical-align: top;
 }
